--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQLDATABASE = railway
-MYSQLHOST = roundhouse.proxy.rlwy.net
-MYSQLPASSWORD = QSsvkOqfsnwByiajxdlTEyjOnJZjnBSP
-MYSQLPORT = 56336
+MYSQLHOST = monorail.proxy.rlwy.net
+MYSQLPASSWORD = tCsHNQcukRXPeCNpvWggavJOvcwEgjlL
+MYSQLPORT = 18026
 MYSQLUSER = root
