--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+SECRET_KEY= admpass123
 MYSQLDATABASE = railway
 MYSQLHOST = monorail.proxy.rlwy.net
 MYSQLPASSWORD = tCsHNQcukRXPeCNpvWggavJOvcwEgjlL
 MYSQLPORT = 18026
 MYSQLUSER = root
+JWTSECURITY=utn
